--- a/app/index.html
+++ b/app/index.html
@@ -85,8 +85,8 @@
         <div id="panel-form-game" class="col-2">
           <form>
             <div class="mb-3">
-              <label for="form-game-mode" class="form-label">Mode</label>
-              <select name="form-game-mode" id="form-game-mode" class="form-select"></select>
+              <label for="form-game-queue" class="form-label">Queue</label>
+              <select name="form-game-queue" id="form-game-queue" class="form-select"></select>
             </div>
             <div class="mb-3">
               <label for="form-game-map" class="form-label">Map</label>
