feat: add streaks chart

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
           <ul class="nav nav-pills">
             <li class="nav-item me-2"><a id="tab-games" class="tab nav-link" aria-current="page" href="#">Games</a></li>
             <li class="nav-item me-2"><a id="tab-time" class="tab nav-link" aria-current="page" href="#">Over Time</a></li>
+            <li class="nav-item me-2"><a id="tab-streaks" class="tab nav-link" aria-current="page" href="#">Streaks</a></li>
             <li class="nav-item me-2"><a id="tab-combined" class="tab nav-link" aria-current="page" href="#">Combined</a></li>
           </ul>
         </div>
@@ -49,6 +50,7 @@
     <div class="container-fluid">
       <div id="panel-games" class="panel"></div>
       <div id="panel-time" class="panel chart"></div>
+      <div id="panel-streaks" class="panel chart"></div>
       <div id="panel-combined" class="panel">
         <div class="row row-cols-lg-auto justify-content-center mb-3">
           <div class="col d-flex align-items-center">
